created earth page with three.js, style and aside mouseover event

--- a/html/planets.html
+++ b/html/planets.html
@@ -10,17 +10,37 @@
 <body>
     <header>
         <a href="../index.html" class="logo">NEBULA <br><strong class="grey__text"> NEST</strong></a>
-        <nav>
-            <a class="text" href="#">Mecury</a>
-            <a class="text" href="#">Venus</a>
-            <a class="text" href="#">Earth</a>
-            <a class="text" href="#">Mars</a>
-            <a class="text" href="#">Jupter</a>
-            <a class="text" href="#">Saturn</a>
-            <a class="text" href="#">Uran</a>
-            <a class="text" href="#">Neptune</a>
-        </nav>
     </header>
+    
+    <aside id="menu">
+        <img id="sun__icon" src="../assets/sun.png" alt="">
+        <div class="planet__container">
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/mercury.png" alt="">Mecury</a>
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/venus.png" alt="">Venus</a>
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/earth.png" alt="">Earth</a>
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/mars.png" alt="">Mars</a>
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/jupter.png" alt="">Jupter</a>
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/saturn.png" alt="">Saturn</a>
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/uranus.png" alt="">Uranus</a>
+            <a class="text planet" href="#"><img class="planet__img" src="../assets/neptune.png" alt="">Neptune</a>
+        </div>
+    </aside>
+
+    <main>
+        <div class="content">
+            <div class="text__content">
+                <h1 class="title">EARTH</h1>
+                <p class="text text__presentation">Earth—our home planet—is the third planet from the Sun, and the only place we know of so far that’s inhabited by living things. It's also the only planet in our solar system with liquid water on the surface.</p>
+                <ul>
+                    <li class="text text__presentation">Lenght of Day: 23.9h</li>
+                    <li class="text text__presentation">Lenght of Year: 365.25 days</li>
+                    <li class="text text__presentation">Distance from Sun: 93,327,712 miles</li>
+                </ul>
+            </div>
+            <div class="container"></div>
+        </div>
+    </main>
     <script type="module" src="../js/planets.js"></script>
+    <script src="../js/aside.js"></script>
 </body>
 </html>
