--- a/html/rotation.html
+++ b/html/rotation.html
@@ -19,7 +19,7 @@
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat, soluta, qui rem vel minus sint quam ullam adipisci neque amet excepturi est deserunt eius nesciunt rerum! Facilis non harum eum et nulla autem ratione accusantium, eos, iste cum sit nam sed? Fuga odit sed reprehenderit, culpa facere natus eveniet! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque sint culpa tempore sapiente, fugiat assumenda aut aspernatur necessitatibus alias dolorum illum sequi minima ad facilis repellat! Earum voluptate at eius aliquid sapiente maiores non quo expedita quisquam aut eos vero adipisci eligendi amet eaque ea labore, perspiciatis nam possimus ipsam!</p>
             <div class="btn__container">
                 <button class="btn" id="back__btn">BACK</button>
-                <button class="btn" id="ntx__btn" onclick="baba()">NEXT</button>
+                <button class="btn" id="nxt__btn">NEXT</button>
             </div>
         </div>
     </main>
