created all planets base files (html and js)

--- a/html/earth.html
+++ b/html/earth.html
@@ -15,14 +15,14 @@
     <aside id="menu">
         <img id="sun__icon" src="../assets/sun.png" alt="">
         <div class="planet__container">
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/mercury.png" alt="">Mecury</a>
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/venus.png" alt="">Venus</a>
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/earth.png" alt="">Earth</a>
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/mars.png" alt="">Mars</a>
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/jupter.png" alt="">Jupter</a>
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/saturn.png" alt="">Saturn</a>
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/uranus.png" alt="">Uranus</a>
-            <a class="text planet" href="#"><img class="planet__img" src="../assets/neptune.png" alt="">Neptune</a>
+            <a class="text planet" href="../html/mercury.html"><img class="planet__img" src="../assets/mercury.png" alt="">Mecury</a>
+            <a class="text planet" href="../html/venus.html"><img class="planet__img" src="../assets/venus.png" alt="">Venus</a>
+            <a class="text planet" href="../html/earth.html"><img class="planet__img" src="../assets/earth.png" alt="">Earth</a>
+            <a class="text planet" href="../html/mars.html"><img class="planet__img" src="../assets/mars.png" alt="">Mars</a>
+            <a class="text planet" href="../html/jupter.html"><img class="planet__img" src="../assets/jupter.png" alt="">Jupter</a>
+            <a class="text planet" href="../html/saturn.html"><img class="planet__img" src="../assets/saturn.png" alt="">Saturn</a>
+            <a class="text planet" href="../html/uranus.html"><img class="planet__img" src="../assets/uranus.png" alt="">Uranus</a>
+            <a class="text planet" href="../html/neptune.html"><img class="planet__img" src="../assets/neptune.png" alt="">Neptune</a>
         </div>
     </aside>
 
@@ -40,7 +40,7 @@
             <div class="container"></div>
         </div>
     </main>
-    <script type="module" src="../js/planets.js"></script>
+    <script type="module" src="../js/earth.js"></script>
     <script src="../js/aside.js"></script>
 </body>
 </html>
