changed all pages texts

--- a/html/earth.html
+++ b/html/earth.html
@@ -32,9 +32,9 @@
                 <h1 class="title">EARTH</h1>
                 <p class="text text__presentation">Earth—our home planet—is the third planet from the Sun, and the only place we know of so far that’s inhabited by living things. It's also the only planet in our solar system with liquid water on the surface.</p>
                 <ul>
-                    <li class="text text__presentation">Lenght of Day: 23.9h</li>
-                    <li class="text text__presentation">Lenght of Year: 365.25 days</li>
-                    <li class="text text__presentation">Distance from Sun: 93,327,712 miles</li>
+                    <li class="text text__presentation">Lenght of Day: 23.9 Hours</li>
+                    <li class="text text__presentation">Lenght of Year: 365.25 Days</li>
+                    <li class="text text__presentation">Distance from Sun: 149,600,000 km</li>
                 </ul>
             </div>
             <div class="container"></div>
