--- a/html/jupter.html
+++ b/html/jupter.html
@@ -29,12 +29,12 @@
     <main>
         <div class="content">
             <div class="text__content">
-                <h1 class="title">EARTH</h1>
-                <p class="text text__presentation">Earth—our home planet—is the third planet from the Sun, and the only place we know of so far that’s inhabited by living things. It's also the only planet in our solar system with liquid water on the surface.</p>
+                <h1 class="title">JUPTER</h1>
+                <p class="text text__presentation">Jupiter is, by far, the largest planet in the solar system – more than twice as massive as all the other planets combined.</p>
                 <ul>
-                    <li class="text text__presentation">Lenght of Day: 23.9h</li>
-                    <li class="text text__presentation">Lenght of Year: 365.25 days</li>
-                    <li class="text text__presentation">Distance from Sun: 93,327,712 miles</li>
+                    <li class="text text__presentation">Lenght of Day: 9 Earth Hours and 56 minutes</li>
+                    <li class="text text__presentation">Lenght of Year: 12 Earth Years</li>
+                    <li class="text text__presentation">Distance from Sun: 778,330,000 km</li>
                 </ul>
             </div>
             <div class="container"></div>
