--- a/html/rotation.html
+++ b/html/rotation.html
@@ -16,7 +16,9 @@
         </div>
         <div class="content__container">
             <h1 class="title"><strong class="grey__text">THE </strong>ROTATION </h1>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat, soluta, qui rem vel minus sint quam ullam adipisci neque amet excepturi est deserunt eius nesciunt rerum! Facilis non harum eum et nulla autem ratione accusantium, eos, iste cum sit nam sed? Fuga odit sed reprehenderit, culpa facere natus eveniet! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque sint culpa tempore sapiente, fugiat assumenda aut aspernatur necessitatibus alias dolorum illum sequi minima ad facilis repellat! Earum voluptate at eius aliquid sapiente maiores non quo expedita quisquam aut eos vero adipisci eligendi amet eaque ea labore, perspiciatis nam possimus ipsam!</p>
+            <p class="text">The concepts of rotation and translation play fundamental roles in understanding the movement of planets in the solar system. <strong class="grey__text">Rotation</strong> involves the planet's spin around its own axis, directly influencing the succession of day and night. On the other hand, <strong class="grey__text">translation</strong> corresponds to the planet's orbit around the Sun, thereby determining the duration of a year.<br><br>
+
+            The mathematical description of these phenomena has evolved over centuries, refined by notable scholars such as <strong class="grey__text">Copernicus</strong>, <strong class="grey__text">Kepler</strong>, and <strong class="grey__text">Newton</strong>. Their contributions were crucial for consolidating the scientific understanding of celestial movements, providing a solid foundation for modern astronomy.</p>
             <div class="btn__container">
                 <button class="btn" id="back__btn">BACK</button>
                 <button class="btn" id="nxt__btn">NEXT</button>
