--- a/html/saturn.html
+++ b/html/saturn.html
@@ -29,12 +29,12 @@
     <main>
         <div class="content">
             <div class="text__content">
-                <h1 class="title">EARTH</h1>
-                <p class="text text__presentation">Earth—our home planet—is the third planet from the Sun, and the only place we know of so far that’s inhabited by living things. It's also the only planet in our solar system with liquid water on the surface.</p>
+                <h1 class="title">SATURN</h1>
+                <p class="text text__presentation">Saturn's beautiful rings are relatively young. They may have formed in the era of the dinosaurs here on Earth.</p>
                 <ul>
-                    <li class="text text__presentation">Lenght of Day: 23.9h</li>
-                    <li class="text text__presentation">Lenght of Year: 365.25 days</li>
-                    <li class="text text__presentation">Distance from Sun: 93,327,712 miles</li>
+                    <li class="text text__presentation">Lenght of Day: 10 Earth Hours and 34 Minutes</li>
+                    <li class="text text__presentation">Lenght of Year: 29 Earth Years, 167 Days and 6 Hours</li>
+                    <li class="text text__presentation">Distance from Sun: 1,429,400,000 km</li>
                 </ul>
             </div>
             <div class="container"></div>
