--- a/html/venus.html
+++ b/html/venus.html
@@ -29,12 +29,12 @@
     <main>
         <div class="content">
             <div class="text__content">
-                <h1 class="title">EARTH</h1>
-                <p class="text text__presentation">Earth—our home planet—is the third planet from the Sun, and the only place we know of so far that’s inhabited by living things. It's also the only planet in our solar system with liquid water on the surface.</p>
+                <h1 class="title">VENUS</h1>
+                <p class="text text__presentation">Although it's similar in structure and size to Earth, Venus has a thick atmosphere that traps heat in a runaway greenhouse effect, making it the hottest planet in our solar system.</p>
                 <ul>
-                    <li class="text text__presentation">Lenght of Day: 23.9h</li>
-                    <li class="text text__presentation">Lenght of Year: 365.25 days</li>
-                    <li class="text text__presentation">Distance from Sun: 93,327,712 miles</li>
+                    <li class="text text__presentation">Lenght of Day: 243 Earth Days</li>
+                    <li class="text text__presentation">Lenght of Year: 225 Earth Days</li>
+                    <li class="text text__presentation">Distance from Sun: 108,200,000 km</li>
                 </ul>
             </div>
             <div class="container"></div>
