--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main id="content">
         <div class="content__container">
             <h1 class="title">NEBULA <br><strong class="grey__text">NEST </strong></h1>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat, soluta, qui rem vel minus sint quam ullam adipisci neque amet excepturi est deserunt eius nesciunt rerum! Facilis non harum eum et nulla autem ratione accusantium, eos, iste cum sit nam sed? Fuga odit sed reprehenderit, culpa facere natus eveniet!</p>
+            <p class="text">The Nebula Nest is a platform that provides information about the rotational and translational movements of the planets in the solar system through 3D planetary models. All the information provided originates from the official <a id="nasa__link" target="_blank" href="https://science.nasa.gov/solar-system/">NASA</a> website.</p>
             <button class="btn" id="start__btn">START</button>
         </div>
         <div class="image__content">
