--- a/html/mars.html
+++ b/html/mars.html
@@ -29,11 +29,11 @@
     <main>
         <div class="content">
             <div class="text__content">
-                <h1 class="title">EARTH</h1>
-                <p class="text text__presentation">Earth—our home planet—is the third planet from the Sun, and the only place we know of so far that’s inhabited by living things. It's also the only planet in our solar system with liquid water on the surface.</p>
+                <h1 class="title">MARS</h1>
+                <p class="text text__presentation">The only planet we know of inhabited entirely by robots.</p>
                 <ul>
-                    <li class="text text__presentation">Lenght of Day: 23.9h</li>
-                    <li class="text text__presentation">Lenght of Year: 365.25 days</li>
+                    <li class="text text__presentation">Lenght of Day: 1 Earth Day and 37 minutes</li>
+                    <li class="text text__presentation">Lenght of Year: 687 Earth Days</li>
                     <li class="text text__presentation">Distance from Sun: 93,327,712 miles</li>
                 </ul>
             </div>
