--- a/html/mercury.html
+++ b/html/mercury.html
@@ -29,12 +29,12 @@
     <main>
         <div class="content">
             <div class="text__content">
-                <h1 class="title">EARTH</h1>
-                <p class="text text__presentation">Earth—our home planet—is the third planet from the Sun, and the only place we know of so far that’s inhabited by living things. It's also the only planet in our solar system with liquid water on the surface.</p>
+                <h1 class="title">MERCURY</h1>
+                <p class="text text__presentation">From the surface of Mercury, the Sun would appear more than three times as large as it does when viewed from Earth.</p>
                 <ul>
-                    <li class="text text__presentation">Lenght of Day: 23.9h</li>
-                    <li class="text text__presentation">Lenght of Year: 365.25 days</li>
-                    <li class="text text__presentation">Distance from Sun: 93,327,712 miles</li>
+                    <li class="text text__presentation">Lenght of Day: 59 Earth days</li>
+                    <li class="text text__presentation">Lenght of Year: 88 Earth days</li>
+                    <li class="text text__presentation">Distance from Sun: 57,910,000 km</li>
                 </ul>
             </div>
             <div class="container"></div>
