--- a/html/solar-system.html
+++ b/html/solar-system.html
@@ -16,7 +16,7 @@
         <img id="sun__icon" src="../assets/sun.png" alt="">
         <div class="planet__container">
             <a class="text planet" href="../html/solar-system.html"><img class="planet__img" src="../assets/sun.png" alt="">Solar System</a>
-            <a class="text planet" href="../html/mercury.html"><img class="planet__img" src="../assets/mercury.png" alt="">Mercury</a>
+            <a class="text planet" href="../html/mercury.html"><img class="planet__img" src="../assets/mercury.png" alt="">Mecury</a>
             <a class="text planet" href="../html/venus.html"><img class="planet__img" src="../assets/venus.png" alt="">Venus</a>
             <a class="text planet" href="../html/earth.html"><img class="planet__img" src="../assets/earth.png" alt="">Earth</a>
             <a class="text planet" href="../html/mars.html"><img class="planet__img" src="../assets/mars.png" alt="">Mars</a>
@@ -26,22 +26,7 @@
             <a class="text planet" href="../html/neptune.html"><img class="planet__img" src="../assets/neptune.png" alt="">Neptune</a>
         </div>
     </aside>
-
-    <main>
-        <div class="content">
-            <div class="text__content">
-                <h1 class="title">NEPTUNE</h1>
-                <p class="text text__presentation">The first planet discovered with math.</p>
-                <ul>
-                    <li class="text text__presentation">Lenght of Day: 16 Hours and 6 Minutes</li>
-                    <li class="text text__presentation">Lenght of Year: 165 Earth Years</li>
-                    <li class="text text__presentation">Distance from Sun: 4,504,300,000 km</li>
-                </ul>
-            </div>
-            <div class="container"></div>
-        </div>
-    </main>
-    <script type="module" src="../js/neptune.js"></script>
+    <script type="module" src="../js/solar-system.js"></script>
     <script src="../js/aside.js"></script>
 </body>
 </html>
