--- a/html/venus.html
+++ b/html/venus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nebula Nest</title>
     <link rel="shortcut icon" href="../assets/nebula.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/panets.css">
+    <link rel="stylesheet" href="../css/planets.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,8 @@
     <aside id="menu">
         <img id="sun__icon" src="../assets/sun.png" alt="">
         <div class="planet__container">
-            <a class="text planet" href="../html/mercury.html"><img class="planet__img" src="../assets/mercury.png" alt="">Mecury</a>
+            <a class="text planet" href="../html/solar-system.html"><img class="planet__img" src="../assets/sun.png" alt="">Solar System</a>
+            <a class="text planet" href="../html/mercury.html"><img class="planet__img" src="../assets/mercury.png" alt="">Mercury</a>
             <a class="text planet" href="../html/venus.html"><img class="planet__img" src="../assets/venus.png" alt="">Venus</a>
             <a class="text planet" href="../html/earth.html"><img class="planet__img" src="../assets/earth.png" alt="">Earth</a>
             <a class="text planet" href="../html/mars.html"><img class="planet__img" src="../assets/mars.png" alt="">Mars</a>
