created saturn ring

--- a/html/rotation.html
+++ b/html/rotation.html
@@ -15,7 +15,7 @@
             <img id="astronaut__img__two" src="../assets/astronaut__two.png" alt="astronaut">
         </div>
         <div class="content__container">
-            <h1 class="title"><strong class="grey__text">THE </strong>ROTATION </h1>
+            <h1 class="title">ROTATION<br><strong class="grey__text"> AND </strong>  TRANSLATION </h1>
             <p class="text">The concepts of rotation and translation play fundamental roles in understanding the movement of planets in the solar system. <strong class="grey__text">Rotation</strong> involves the planet's spin around its own axis, directly influencing the succession of day and night. On the other hand, <strong class="grey__text">translation</strong> corresponds to the planet's orbit around the Sun, thereby determining the duration of a year.<br><br>
 
             The mathematical description of these phenomena has evolved over centuries, refined by notable scholars such as <strong class="grey__text">Copernicus</strong>, <strong class="grey__text">Kepler</strong>, and <strong class="grey__text">Newton</strong>. Their contributions were crucial for consolidating the scientific understanding of celestial movements, providing a solid foundation for modern astronomy.</p>
